--- a/src/pages/navbar/style.less
+++ b/src/pages/navbar/style.less
@@ -3,8 +3,8 @@
 }
 
 .navbar>li {
-  padding: 1em;
   float: right;
+  padding: 1em;
 }
 
 .navbar>li:first-of-type {
@@ -20,6 +20,7 @@
 
 .navbar>li>a {
   text-decoration: none;
+  padding: 1em 0em;
   color: black;
 }
 
